# ppccdgfuchile

./: .gitignore  .mail.txt  1_🏠_Inicio.py  2_📄_Datos.py  3_🗺️_Mapa.py  4_🌧️_Ingresa tus Datos.py  Dockerfile  LICENSE  README.md  admins.yaml  datawork.ipynb  docker-compose.yml  how_to_run_webapp.txt  kk.txt  params.py  pyproject.toml  requirements.txt  requirements_linux.txt  utils.py
.streamlit/: config.toml
eventos/: 2023-07-15.csv  2023-07-21.csv  2024-04-24.csv  2024-04-29.csv  2024-06-21.csv  2024-06-21_2024-06-23.csv  2024-07-15.csv  2024-08-01.csv  2024-08-01_2024-08-03.csv  2024-08-04.csv  2024-08-05.csv
pages/: 2_🌧️_Registros.py  2_📄_Datos.py  2_🗺️_Mapa.py  2_🗺️_Mapas.py  3_🌧️_Ingresa tus Datos.py  3_🌧️_Registros.py  3_👤_Registro.py  3_👤_Regístrate.py  3_🗺️_Mapa.py  3_🗺️_Mapas.py  4_⚙️_Administrador.py  4_🌧️_Ingresa tus Datos.py  4_👤_Regístrate.py  4_👤_Únete!.py  4_🚹_Regístrate.py  5_⚙️_Admin.py  5_⚙️_Administrador.py
pages/old/: 3_🌧️_Ingresa tus Datos.py  4_👤_Únete!.py
usuarios/: usuarios.csv
visparams/: visparams.csv
